// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Friends list item component will render correctly with full friend data 1`] = `
"<li class="min-h-24 flex space-x-3 even:bg-blue-300/40 even:dark:bg-blue-900/40 rounded-md p-2 items-center">
  <div class="min-w-[64px]">
    <p class="rounded-full bg-link flex gap-2 items-center"><img class="rounded-full" width="64px" height="64px" alt="" src="https://example.com/avatar.jpg">
      <!--v-if-->
    </p>
  </div>
  <div class="grow flex flex-col space-y-1">
    <p class="flex flex-col md:flex-row space-x-0 md:space-x-3 items-baseline"><button class="text-link hover:text-link-hover text-2xl text-2xl" data-testid="select-friend-bob32" type="button">
        <!--v-if-->Bob the Diver
      </button><span class="font-bold">@bob32</span></p>
    <div class="flex flex-col xl:flex-row space-x-0 xl:space-x-3">
      <p class="flex space-x-2"><span class="font-bold min-w-20 text-right">Friends for:</span><span class="w-36">2 months</span></p>
      <p class="flex space-x-2"><span class="font-bold min-w-20 text-right">Member for:</span><span class="w-36">3 years</span></p>
      <p class="flex space-x-2"><span class="font-bold min-w-20 text-right">Location:</span><span class="w-36">San Francisco, CA</span></p>
    </div>
  </div>
  <div><button class="text-grey-950 p-2 m-0 text-sm border-1 border-grey-800 shadow-sm shadow-grey-800 rounded-md bg-gradient-to-t disabled:text-grey-300 from-danger-dark hover:to-danger-hover to-danger" data-testid="unfriend-bob32" type="button">
      <!--v-if--> Unfriend
    </button></div>
</li>"
`;

exports[`Friends list item component will render correctly with partial friend data 1`] = `
"<li class="min-h-24 flex space-x-3 even:bg-blue-300/40 even:dark:bg-blue-900/40 rounded-md p-2 items-center">
  <div class="min-w-[64px]">
    <p class="rounded-full bg-link flex gap-2 items-center"><img class="rounded-full" width="64px" height="64px" alt="" src="https://ui-avatars.com/api/?name=bob32">
      <!--v-if-->
    </p>
  </div>
  <div class="grow flex flex-col space-y-1">
    <p class="flex flex-col md:flex-row space-x-0 md:space-x-3 items-baseline"><button class="text-link hover:text-link-hover text-2xl text-2xl" data-testid="select-friend-bob32" type="button">
        <!--v-if-->@bob32
      </button>
      <!--v-if-->
    </p>
    <div class="flex flex-col xl:flex-row space-x-0 xl:space-x-3">
      <p class="flex space-x-2"><span class="font-bold min-w-20 text-right">Friends for:</span><span class="w-36">2 months</span></p>
      <p class="flex space-x-2"><span class="font-bold min-w-20 text-right">Member for:</span><span class="w-36">3 years</span></p>
      <!--v-if-->
    </div>
  </div>
  <div><button class="text-grey-950 p-2 m-0 text-sm border-1 border-grey-800 shadow-sm shadow-grey-800 rounded-md bg-gradient-to-t disabled:text-grey-300 from-danger-dark hover:to-danger-hover to-danger" data-testid="unfriend-bob32" type="button">
      <!--v-if--> Unfriend
    </button></div>
</li>"
`;
